test/resources/Typecheck/TryCatchAlreadyDefined.expected
TryCatchAlreadyDefined.java:13: error: RuntimeException a is already defined in classC1
TryCatchAlreadyDefined.java:18: error: RuntimeException b is already defined in method run(...)
